--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Speech Recognition</title>
+  <title>Te amo mi amorcito</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <section>
-    <h1>Reconocimiento de voz</h1>
+    <h1>Tu mandas</h1>
     <p>Chrome</p>
     <div class="container">
       <div class="texts">
