--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <section>
     <h1>Tu mandas</h1>
-    <p>Chrome</p>
+    <p>Mi princesa</p>
     <div class="container">
       <div class="texts">
       </div>
